--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "@nuxt/devtools": "latest",
     "@types/node": "^18.16.19",
     "nuxt": "^3.6.2"
+  },
+  "dependencies": {
+    "cesium": "^1.107.0",
+    "vue-cesium": "^3.2.0"
   }
 }
