--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "cesium": "^1.107.0",
-    "vue-cesium": "^3.2.0"
+    "vue-cesium": "^3.2.0",
+    "vuetify": "^3.3.7"
   }
 }
