--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxt/devtools": "latest",
     "@types/node": "^18.16.19",
     "nuxt": "^3.6.2",
+    "sass": "^1.63.6",
     "vite-plugin-vuetify": "^1.0.2"
   },
   "dependencies": {
